--- a/index.css
+++ b/index.css
@@ -1,6 +1,52 @@
-#heading {
-  color: red;
+.header {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
 }
-.name {
-  color: blue;
+
+.logo {
+  width: 125px;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+}
+
+.nav-items {
+  padding: 0px 20px;
+}
+.nav-items > ul {
+  font-size: 24px;
+  display: flex;
+  list-style-type: none;
+}
+
+.nav-items > ul > li {
+  padding: 10px;
+  margin: 10px;
+}
+
+.search {
+  padding: 10px 10px;
+}
+
+.resto-card {
+  width: 200px;
+  margin: 5px;
+  padding: 10px;
+}
+
+.resto-card:hover {
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+.res-img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+}
+
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
 }
