--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 }
 
 .logo {
-  width: 125px;
+  width: 150px;
   height: 120px;
   display: flex;
   justify-content: center;
@@ -56,5 +56,22 @@
 }
 
 .filter-btn {
+  cursor: pointer;
+}
+
+.shimmer-card {
+  width: 200px;
+  height: 350px;
+  background-color: lightgray;
+  margin: 5px;
+}
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.login {
+  padding: 5px 15px;
   cursor: pointer;
 }
